# ipgeomancer

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  flake.nix  fly.toml
.github/workflows/: ci.yml
ipgeom_cli/: Cargo.toml  README.md
ipgeom_cli/src/: main.rs
ipgeom_cli/src/cmd/: mod.rs  password_hash.rs  ping.rs  rdap.rs  server.rs  traceroute.rs  whois.rs
ipgeom_cli/src/cmd/dns/: mod.rs  query.rs
ipgeom_cli/src/cmd/domain/: check_certificate.rs  mod.rs
ipgeom_cli/src/cmd/ipdb/: lookup.rs  mod.rs
ipgeom_cli/src/cmd/rpsl/: mod.rs  print.rs
ipgeom_cli/src/cmd/store/: mod.rs  sqlite.rs  update.rs
ipgeom_query/: Cargo.toml  README.md
ipgeom_query/src/: cert.rs  dns.rs  lib.rs  password.rs  ping.rs  traceroute.rs
ipgeom_query/tests/: domain.rs  google.rs  password_hash.rs  ping.rs
ipgeom_rir/: Cargo.toml  README.md
ipgeom_rir/src/: db.rs  lib.rs  rpsl.rs  store.rs  types.rs
ipgeom_rir/src/db/: mod.rs  sqlite.rs
ipgeom_rir/src/registry/: afrinic.rs  apnic.rs  arin.rs  lacnic.rs  mod.rs  ripe.rs
ipgeom_rpsl/: Cargo.toml  README.md
ipgeom_rpsl/src/: lib.rs  object.rs  typed.rs
ipgeom_rpsl/src/parser/: mod.rs
ipgeom_rpsl/tests/: long_object.txt  read_long_object.rs
ipgeom_server/: Cargo.toml  README.md
ipgeom_server/src/: lib.rs  util.rs
ipgeom_server/src/routes/: apidoc.rs  cert.rs  dns.rs  home.rs  lookup.rs  mod.rs  myip.rs  not_found.rs  password_hash.rs  ping.rs  rdap.rs  traceroute.rs  whois.rs
ipgeom_server/src/routes/api/: dns.rs  domain_cert.rs  mod.rs  not_found.rs  password_hash.rs  ping.rs  rdap.rs  traceroute.rs  whois.rs
ipgeom_server/src/ui/: apidoc.rs  cert.rs  common.rs  dns.rs  home.rs  lookup.rs  mod.rs  myip.rs  not_found.rs  password_hash.rs  ping.rs  rdap.rs  traceroute.rs  whois.rs
ipgeom_server/tests/: api_dns_route.rs  api_domain_cert_route.rs  api_password_hash_route.rs  api_ping_route.rs  api_rdap_route.rs  api_traceroute_route.rs  api_whois_route.rs  dns_route.rs  not_found.rs  root_route.rs  web_pages_no_query.rs  whois_route.rs
ipgeom_whois/: Cargo.toml  README.md
ipgeom_whois/src/: lib.rs
scripts/: ai-setup.sh
