[workspace]
resolver = "2"
members = [
  "ipgeom_rir",
  "ipgeom_rpsl",
  "ipgeom_cli", "ipgeom_server",
  "ipgeom_query", "ipgeom_whois",
]

[workspace.package]
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2021"
homepage = "https://ipgeomancer.fly.dev"
license = "MIT"
repository = "https://github.com/theduke/ipgeomancer"

[workspace.dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = "1"
hickory-client = "0.25.2"
hickory-proto = "0.25.2"
ipnet = "2.11.0"
iprange = "0.6.7"
time = "0.3"
reqwest = { version = "0.11", default-features = false }
maxminddb = "0.26.0"
tracing = "0.1.41"

# Workspace path dependencies
ipgeom_rir = { path = "ipgeom_rir" }
ipgeom_rpsl = { path = "ipgeom_rpsl" }
ipgeom_server = { path = "ipgeom_server" }
ipgeom_query = { path = "ipgeom_query" }
ipgeom_whois = { path = "ipgeom_whois" }
