[package]
name = "ipgeom_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "help", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
maxminddb = "0.26.0"
ipgeom_rir = { path = "../ipgeom_rir" }
ipgeom_rpsl = { path = "../ipgeom_rpsl" }
serde_json = "1.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[[bin]]
name = "ipgeom"
path = "src/main.rs"
