[package]
name = "ipgeom_cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Command line tools for ipgeomancer"
keywords = ["cli", "ip"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5.38", features = ["derive", "help", "env"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
maxminddb = { workspace = true }
ipgeom_rir = { workspace = true }
ipgeom_rpsl = { workspace = true }
ipgeom_server = { workspace = true }
ipgeom_query = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
hickory-client = { workspace = true }
hickory-proto = { workspace = true }
icann-rdap-client = "0.0.22"
async-traceroute = "0.1.2"

[[bin]]
name = "ipgeom"
path = "src/main.rs"
