[package]
name = "ipgeom_query"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Network query library for DNS, RDAP, ping and traceroute"
keywords = ["query", "dns", "rdap", "ping", "traceroute"]
categories = ["network-programming", "asynchronous"]

[features]
test-online = []

[dependencies]
ipgeom_whois = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros"] }
hickory-client = { workspace = true }
hickory-proto = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

icann-rdap-client = { version = "0.0.22" }
surge-ping = "0.8"
rustls = "0.23.27"
x509-parser = "0.17.0"
webpki = "0.22.4"
webpki-roots = "1.0.0"
async-traceroute = "0.1.2"
bcrypt = "0.17.0"
