[package]
name = "ipgeom_rir"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "blocking",
] }
ipnetwork = "0.21"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
flate2 = "1.1.1"
rpsl-rs = "2.0.0"
tokio = { version = "1.45.0", features = ["full"] }
iprange = "0.6.7"
ipnet = "2.11.0"
ipgeom_rpsl = { path = "../ipgeom_rpsl" }
maxminddb-writer = "0.1.0"
maxminddb = "0.26.0"
tracing = "0.1.41"

