[package]
name = "ipgeom_rpsl"
version = "0.1.0"
edition = "2024"

[dependencies]
ipnet = { version = "2.11.0", features = ["serde"] }
iprange = { version = "0.6.7", features = ["serde"] }
time = { version = "0.3", features = ["parsing", "formatting", "macros", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
