[package]
name = "ipgeom_rpsl"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser and types for RPSL objects"
keywords = ["rpsl", "parser"]
categories = ["network-programming", "parsing"]

[dependencies]
ipnet = { workspace = true, features = ["serde"] }
iprange = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["parsing", "formatting", "macros", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
