[package]
name = "ipgeom_whois"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Asynchronous WHOIS client"
keywords = ["whois", "client"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { workspace = true, features = ["net", "time", "macros", "io-util", "rt"] }
serde = { workspace = true, features = ["derive"] }
